--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,62 +1,78 @@
 @media (max-width: 769px) {
-    main::after {
-        background: linear-gradient(0deg, #000 20%, rgba(0, 0, 0, 0.00) 65%) no-repeat;
-        width: 100vw;
-    }
+  main::after {
+    background: linear-gradient(0deg, #000 50%, rgba(0, 0, 0, 0) 65%) no-repeat;
+    width: 100vw;
+    z-index: 1;
+  }
 
-    main .personagem .imagem {
-        height: 85%;
-    }
+  main .personagem .imagem {
+    height: 85%;
+  }
 
-    .conteudo {
-        justify-content: flex-end;
-        left: 0;
-        top: -35%;
-        max-width: 100vw;
-        padding: 30px;
-    }
+  .conteudo {
+    justify-content: flex-end;
+    left: 0;
+    top: -20%;
+    max-width: 100%;
+    padding: 30px;
+  }
 
-    .conteudo .nome-personagem {
-        font-size: 36px;
-    }
+  .conteudo .nome-personagem {
+    font-size: 36px;
+  }
 
-    .conteudo .descricao {
-        max-width: 500px;
-    }
+  .conteudo .descricao {
+    max-width: 500px;
+  }
 
-    .botoes {
-        flex-direction: row;
-        align-items: flex-end;
-        width: 100%;
-        padding-top: 30px;
-        top: -15%;
-    }
+  .botoes {
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: center;
+    width: 100%;
+    padding: 30px;
+    z-index: 2;
+  }
 
-    .botoes .botao img {
-        max-width: 60px;
-    }
+  .botoes .botao img {
+    max-width: 60px;
+  }
 }
 
 @media (max-width: 425px) {
-    .conteudo .logo {
-        width: 170px;
-        height: 75px;
-    }
+  main .personagem .imagem {
+    height: 55vh;
+    
+  }
 
-    .conteudo {
-        top: -30%;
-    }
+  .conteudo{
+    z-index: 2;
+  }
+  .conteudo .logo {
+    width: 170px;
+    height: 75px;
+  }
 
-    .conteudo .nome-personagem {
-        font-size: 24px;
-    }
+  .conteudo {
+    justify-content: flex-end;
+    left: 0;
+    top: -30%;
+  }
 
-    .botoes {
-        top: -20%;
-    }
+  .conteudo .nome-personagem {
+    font-size: 24px;
+  }
 
-    botoes .botao{
-        max-width: 40px;
-    }
+  .conteudo .descricao {
+    max-width: 330px;
+  }
 
+  .botoes {
+    padding: 20px;
+    top: -20%;
+  }
+  
+  .botoes .botao img {
+    max-width: 50px;
+  }
 }
