--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,8 +1,7 @@
 @media (max-width: 769px) {
   main::after {
-    background: linear-gradient(0deg, #000 50%, rgba(0, 0, 0, 0) 65%) no-repeat;
+    background: linear-gradient(0deg, #000 20%, rgba(0, 0, 0, 0.00) 65%) no-repeat;
     width: 100vw;
-    z-index: 1;
   }
 
   main .personagem .imagem {
@@ -31,7 +30,6 @@
     justify-content: center;
     width: 100%;
     padding: 30px;
-    z-index: 2;
   }
 
   .botoes .botao img {
@@ -40,14 +38,17 @@
 }
 
 @media (max-width: 425px) {
+
+  main::after {
+    background: linear-gradient(0deg, #000 50%, rgba(0, 0, 0, 0) 65%) no-repeat;
+    z-index: 1;
+  }
+
   main .personagem .imagem {
     height: 55vh;
     
   }
 
-  .conteudo{
-    z-index: 2;
-  }
   .conteudo .logo {
     width: 170px;
     height: 75px;
@@ -57,6 +58,7 @@
     justify-content: flex-end;
     left: 0;
     top: -30%;
+    z-index: 2
   }
 
   .conteudo .nome-personagem {
@@ -69,7 +71,8 @@
 
   .botoes {
     padding: 20px;
-    top: -20%;
+    top: -10%;
+    z-index: 2
   }
   
   .botoes .botao img {
