--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,65 +1,78 @@
 @media (max-width: 769px) {
-  main::after {
-      background: linear-gradient(0deg, #000 20%, rgba(0, 0, 0, 0.00) 65%) no-repeat;
-      width: 100vw;
-  }
+    main::after {
+        background: linear-gradient(0deg, #000 35%, rgba(0, 0, 0, 0.00) 65%) no-repeat;
+        width: 100vw;
+        z-index: 1;
+    }
 
-  main .personagem .imagem {
-      height: 85%;
-  }
+    main .personagem .imagem {
+        height: 75%;
+    }
 
-  .conteudo {
-      justify-content: flex-end;
-      left: 0;
-      top: -20%;
-      max-width: 100vw;
-      padding: 30px;
-  }
+    .conteudo {
+        justify-content: flex-end;
+        left: 0;
+        top: -35%;
+        max-width: 100vw;
+        padding: 30px;
+        z-index: 2;
+    }
 
-  .conteudo .nome-personagem {
-      font-size: 36px;
-  }
+    .conteudo .nome-personagem {
+        font-size: 36px;
+    }
 
-  .conteudo .descricao {
-      max-width: 500px;
-  }
+    .conteudo .descricao {
+        max-width: 500px;
+    }
 
-  .botoes {
-      flex-direction: row;
-      align-items: flex-end;
-      width: 100%;
-      padding: 30px;
-  }
+    .botoes {
+        flex-direction: row;
+        align-items: flex-end;
+        width: 100%;
+        padding: 30px;
+        top: -20%;
+        right: -5%;
+        z-index: 2;
+    }
 
-  .botoes .botao img {
-      max-width: 60px;
-  }
+    .botoes .botao img {
+        max-width: 60px;
+    }
 }
 
-@media (max-width: 450px) {
-  main .personagem .imagem {
-      height: auto;
-  }
+@media (max-width: 425px) {
 
-  .conteudo .logo {
-      width: 170px;
-      height: 75px;
-  }
+    main::after {
+      background: linear-gradient(0deg, #000 47%, rgba(0, 0, 0, 0.00) 65%) no-repeat;
+      z-index: 1;
+    }
+    main .personagem .imagem {
+        height: 55%;
+    }
 
-  .conteudo {
-      top: -30%;
-  }
+    .conteudo .logo {
+        width: 170px;
+        height: 75px;
+    }
 
-  .conteudo .nome-personagem {
-      font-size: 24px;
-  }
+    .conteudo {
+        top: -30%;
+        z-index: 2;
+    }
 
-  .botoes {
-      padding: 20px;
-      top: -20%;
-  }
+    .conteudo .nome-personagem {
+        font-size: 24px;
+    }
 
-  .botoes .botao img {
-      max-width: 50px;
-  }
+    .botoes {
+        padding: 20px;
+        top: -20%;
+        right: -5%;
+        z-index: 2;
+    }
+
+    .botoes .botao img {
+        max-width: 50px;
+    }
 }
