--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -27,6 +27,11 @@ main .personagem .imagem {
     width: 100%;
     height: 100%;
     object-fit: cover;
+
+	animation: fadeIn;
+    animation-duration: 2s;
+    animation: fadeBackground;
+    animation-duration: 1.25s;
 }
 
 .conteudo {
@@ -47,12 +52,18 @@ main .personagem .imagem {
     font-family: "Secular One";
     font-weight: 400;
     margin-bottom: 20px;
+
+	animation: fadeInDown;
+    animation-duration: 1.25s;
 }
 
 .conteudo .descricao {
     color: #ffffff;
     font-family: "Rubik";
     line-height: 24px;
+
+	animation: fadeInLeft;
+    animation-duration: 1.25s;
 }
 
 .conteudo .logo {
@@ -61,6 +72,9 @@ main .personagem .imagem {
     height: 100px;
     width: 230px;
     margin-bottom: 35px;
+
+	animation: fadeIn;
+    animation-duration: 3s;
 }
 
 .botoes {
